# example-bindgen-derive

./: Cargo.toml  README.md  build.rs  example.h
src/: bindings.rs  lib.rs
